fix popup gap at the bottom when the UI changes

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -51,6 +51,9 @@
 .logo{
     height: 4rem;
 }
+.path-selector{
+    display: none;
+}
 footer{
     margin-top: 2rem;
     padding-bottom: 60px;
